trunk/Archive2/d2/4bf7eb0ac2b909/output
main.cpp: In function 'int main()':
main.cpp:9:17: error: ISO C++ forbids variable length array 'a' [-Wvla]
     int a[ size ];
                 ^
main.cpp:9:9: warning: unused variable 'a' [-Wunused-variable]
     int a[ size ];
         ^
